bit/templates/pma-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pma-service
spec:
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    targetPort: 80
